force-app/main/default/objects/BET_Custom_Picklist__c/BET_Custom_Picklist__c.object-meta.xml
<CustomObject>
    <label>picklist</label>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>picklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>