force-app/main/default/objects/BET_Custom_Picklist__c/fields/BET_NACE_Code__c.field-meta.xml
<CustomField>
    <fullName>BET_NACE_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACE Code</label>
    <type>Checkbox</type>
</CustomField>