force-app/main/default/objects/BET_Custom_Picklist__c/fields/BET_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>BET_NAICS_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAICS Code</label>
    <type>Checkbox</type>
</CustomField>