force-app/main/default/objects/BET_Custom_Picklist__c/fields/BET_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>BET_Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>